<resources>
    <string name="app_name">Book Inventory</string>

    <string name="error_querying">Querying not supported </string>
    <string name="error_inserting">Insertion not supported </string>
    <string name="error_updating">Updation not supported </string>
    <string name="error_deleting">Deletion not supported </string>

    <string name="add_book_title">Add a Book</string>
    <string name="edit_book_title">Edit Book Details</string>

    <string name="free">Free</string>
    <string name="no_stock">No Stock</string>

    <string name="invalid_title">Please enter the title.</string>
    <string name="invalid_author_name">Please enter the author\'s name.</string>
    <string name="invaild_price">Please enter a valid price.</string>
    <string name="invalid_publisher_name">Please enter the publisher\'s name.</string>
    <string name="invalid_publisher_phone">Please enter a valid publisher phone number, 10 digits long.</string>

    <string name="success_save">Successfully saved book details.</string>
    <string name="success_update">Successfully updated book details.</string>
    <string name="success_delete">Successfully deleted book details.</string>

    <string name="fail_save">Error with saving book details.</string>
    <string name="fail_update">Error with updating book details.</string>
    <string name="fail_delete">Error with deleting book details.</string>

    <string name="delete_dialog_message">Delete this book\'s details?</string>
    <string name="delete_dialog_positive">Delete</string>
    <string name="delete_dialog_negative">Cancel</string>

    <string name="discard_dialog_message">Do you want to discard changes made to the details?</string>
    <string name="discard_dialog_positive">Discard</string>
    <string name="discard_dialog_negative">Keep Editing</string>

    <string name="empty_inventory">Book inventory is empty.</string>

    <string name="order_button">Order</string>
    <string name="sell_button">Sell</string>

    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="type">Type</string>
    <string name="genre">Genre</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="publisher_name">Publisher Name</string>
    <string name="publisher_phone">Publisher Phone</string>

    <string name="currency">Rs.</string>
    <string name="number_default">0</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>

    <string name="type_paperback">Paperback</string>
    <string name="type_hardcover">Hardcover</string>

    <string name="table_name">book</string>

    <string name="genre_default">General</string>
    <string name="genre_fiction">Fiction</string>
    <string name="genre_non_fiction">Non Fiction</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_educational">Educational</string>
    <string name="genre_self_help">Self Help</string>
    <string name="genre_biography">Biography</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

</resources>
